# tts-exp-v1

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.py
doc/: 001_Setting.md  intelext.md
src/config/: config.py
src/config/dataset/: default.py
src/config/ml/: default.py
src/config/model/: vits.py
src/config/path/: default.py
src/dataset/jsut/: README.md  create_tts_dataset.py
src/dataset/pt/: dataset.py  plmodule.py  sampler.py
src/dataset/utils/: create_namelist_files.py
src/experiments/flytts/: inference.py  train00001.py  train00001_noduradv.py  train00001_nowlm.py  train00002.py  train00002_noduradv.py
src/experiments/msistft/: inference.py  train00001.py  train00001_ft.py
src/experiments/msistftef2/: train00001.py  train00001_ganext.py  train00001_ganext_sf.py  train00002_bf16.py  train00002_bf16_pruning_init.py  train00002_bf16_pruning_init_after.py  train00003_bf16_light.py  train00004_bf16_light.py  train00005_bf16_light.py
src/experiments/msistftef2/inference/: inference_bf16.py  inference_prune05.py  inference_std.py  inference_std_fast.py  inference_std_fast_intel.py  inference_std_light_00003.py  inference_std_light_00004.py
src/experiments/utils/: pl_callbacks.py  show_metrics_max.py
src/experiments/vits/accent/: inference.py  train00001.py  train00002.py  train00003.py  train00004.py
src/experiments/vits/base/: train00001.py  train00002.py
src/experiments/vits2/add_blank/: inference.py  train00001.py  train00002.py
src/models/core/components/: attentions.py  decode.py  flow.py  generate_path.py  net_utils.py  posterior_encoder.py  stochastic_duration_predictor.py  text_encoder.py  wn.py
src/models/core/discriminator/: discriminator.py  hifigan.py  (+2 more)
src/models/flytts/: generator.py  plmodule.py  plmodule_noduradv.py  plmodule_nowlm.py
src/models/msistft/: generator.py  generator_cn.py  infer.py  onnx_infer.py  plmodule.py  plmodule_cn.py  torch2onnx.py
src/models/msistftef2/: generator_cn.py  generator_cn_inference.py  generator_cn_inference_rmwn.py  generator_cn_light.py  generator_cn_light_inference.py  plmodule_cn.py  plmodule_cn_light.py  plmodule_cn_prune.py  plmodule_cn_r2gan.py  plmodule_cn_r2gan_sf.py
src/models/vits/: generator.py  loss.py  plmodule.py
src/models/vits2/: README.md  generator.py  infer.py  loss.py  onnx_infer.py  plmodule.py  plmodule_to_pytorch_module.py
src/tts/frontend/: hts.py  openjtalk.py
src/tts/kana/: param.py  utils.py
src/tts/phonome/: base.py  mora.py  param.py  utils.py
src/tts/utils/: audio.py  normalize_text.py
src/utils/: ml.py
tests/: test_slice_segment.py
(+35 files in other folders)
